@@ -15,6 +15,7 @@ Changes:
 - Use kspell2
 - Now PresSpeed is into each page
 - Now PageUp/PageDown during presentation go to beginning of the next/previous slide
+- Each object effect can have it's own speed now
 
 Changes after KPresenter 1.3 RC1
 ================================
